[gd_scene load_steps=6 format=2]

[ext_resource path="res://pong.gd" type="Script" id=1]
[ext_resource path="res://assets/left_pallete.png" type="Texture" id=2]
[ext_resource path="res://assets/right_pallete.png" type="Texture" id=3]
[ext_resource path="res://assets/ball.png" type="Texture" id=4]
[ext_resource path="res://assets/separator.png" type="Texture" id=5]

[node name="Game" type="Node2D"]
position = Vector2( 2, 0 )
script = ExtResource( 1 )

[node name="LeftPalllete" type="Sprite" parent="."]
position = Vector2( 10, 200 )
texture = ExtResource( 2 )

[node name="RightPallete" type="Sprite" parent="."]
position = Vector2( 630, 200 )
texture = ExtResource( 3 )

[node name="Ball" type="Sprite" parent="."]
position = Vector2( 320, 200 )
texture = ExtResource( 4 )

[node name="Separator" type="Sprite" parent="."]
position = Vector2( 320, 200 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 5 )

[node name="LeftScore" type="Label" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 15.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.0823529, 0.819608, 0.87451, 1 )
text = "0"

[node name="RightScore" type="Label" parent="."]
margin_left = 620.0
margin_top = 5.0
margin_right = 630.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.796078, 0.188235, 0.886275, 1 )
text = "0"

